@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form string="Analytic Entry">
+    <label name="root"/>
+    <field name="root"/>
+    <label name="account"/>
+    <field name="account"/>
+    <label name="origin"/>
+    <field name="origin"/>
+</form>
