@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree string="Analytic Entry" editable="bottom">
+    <field name="root"/>
+    <field name="account"/>
+    <field name="origin"/>
+</tree>
